--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:src="@drawable/square_left_arrow" />
     </LinearLayout>
 
@@ -29,15 +30,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="10dp"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageGroup"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="20dp" />
 
             <TextView
@@ -48,7 +47,7 @@
                 android:gravity="center"
                 android:text=" "
                 android:textColor="#FFFFFF"
-                android:textSize="36sp"
+                android:textSize="24sp"
                 app:fontFamily="sans-serif-smallcaps" />
         </LinearLayout>
     </LinearLayout>
@@ -60,6 +59,8 @@
         android:background="#f95959"
         android:orientation="vertical">
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            app:itemTextAppearanceInactive="@style/top_navigation_style"
+            app:itemTextAppearanceActive="@style/top_navigation_style"
             android:id="@+id/top_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,9 +78,7 @@
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/top_navigation">
-
-        </FrameLayout>
+            android:layout_above="@+id/top_navigation"/>
     </LinearLayout>
 
 </LinearLayout>
