--- a/app/src/main/res/menu/top_navigation.xml
+++ b/app/src/main/res/menu/top_navigation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_chat"
+        android:id="@+id/nav_posts"
         android:textSize="50dp"
-        android:title="Chat" />
+        android:title="Posts" />
     <item
         android:id="@+id/nav_files"
         android:textSize="50dp"
